feat: layered packaging (#52)
* feat: layered packaging

* feat: add `JVM_OPTS` env support